--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.0.0",
-    "astro": "^3.1.2",
+    "@astrojs/tailwind": "^5.0.3",
+    "astro": "^4.0.6",
+    "astro-font": "^0.0.28",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
