--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview --host",
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.3",
+    "@sentry/astro": "^7.90.0",
+    "@spotlightjs/astro": "^1.0.8",
     "astro": "^4.0.6",
     "astro-font": "^0.0.28",
     "tailwindcss": "^3.0.24"
