--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@spotlightjs/astro": "^1.0.8",
     "astro": "^4.0.6",
     "astro-font": "^0.0.28",
+    "blaze-slider": "^1.9.3",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
