--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "gestionanew",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev --host",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview --host",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/tailwind": "^6.0.2",
-    "@sentry/astro": "^7.90.0",
-    "@spotlightjs/astro": "^1.0.8",
-    "astro": "^5.13.7",
-    "astro-font": "^0.0.28",
-    "blaze-slider": "^1.9.3",
-    "tailwindcss": "^3.0.24"
-  },
-  "devDependencies": {
-    "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.0",
-    "prettier-plugin-tailwindcss": "^0.5.4"
-  }
+	"name": "gestionanew",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev --host --port 3000",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview --host",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/tailwind": "^6.0.2",
+		"@sentry/astro": "^7.90.0",
+		"@spotlightjs/astro": "^1.0.8",
+		"astro": "^5.13.7",
+		"astro-font": "^0.0.28",
+		"blaze-slider": "^1.9.3",
+		"tailwindcss": "^3.0.24"
+	},
+	"devDependencies": {
+		"prettier": "^3.0.3",
+		"prettier-plugin-astro": "^0.12.0",
+		"prettier-plugin-tailwindcss": "^0.5.4"
+	}
 }
