--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@astrojs/tailwind": "^6.0.2",
+		"@lucide/astro": "^0.544.0",
 		"@sentry/astro": "^7.90.0",
 		"@spotlightjs/astro": "^1.0.8",
 		"astro": "^5.13.7",
