--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/react": "^4.4.2",
 		"@astrojs/svelte": "^7.2.0",
 		"@astrojs/tailwind": "^6.0.2",
 		"@lucide/astro": "^0.544.0",
 		"@sentry/astro": "^7.90.0",
 		"@spotlightjs/astro": "^1.0.8",
+		"@types/react": "^19.2.13",
+		"@types/react-dom": "^19.2.3",
 		"astro": "^5.13.7",
 		"astro-font": "^0.0.28",
 		"blaze-slider": "^1.9.3",
+		"lucide-react": "^0.563.0",
+		"react": "^19.2.4",
+		"react-dom": "^19.2.4",
 		"svelte": "^5.41.2",
 		"tailwindcss": "^3.0.24",
 		"typescript": "^5.9.3"
